--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: auto;
+  background:linear-gradient(81deg, #E7F0FF 9.01%, rgba(232, 241, 255, 0.47) 89.11%);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.heading {
   color: white;
+  width: 99%;
+  background-color: #2AA8FF;
+  padding: 0.5em;
+    font-size: small;
+    justify-content: center;
+    height: 2em;
+    display: flex;
+    align-items: center;
+    margin: 0em;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+@media screen and (max-width: 321px) {
+  .App{
+    height: auto;
+    width: 100% ;
+    }
+    .heading {
+      width: 94.5%;
+      padding: 1em;
+      font-size: xx-small;
+    }
+
+}
+@media screen and (min-width: 322px) and (max-width:376px) {
+  .App{
+    height: auto;
+    width: 100% ;
+    }
+    .heading {
+      width: 95%;
+      padding: 1em;
+      font-size: xx-small;
+    }
+
+}
+@media screen and (min-width:376px) and (max-width:426px) {
+  .App{
+    height: auto;
+    width: 100% ;
+    }
+    .heading {
+      width: 95%;
+      padding: 1em;
+      font-size: x-small;
+    }
+
+}
+@media screen and (min-width:427px) and (max-width: 575px) {
+  .App{
+  height: auto;
+  width: 100% ;
+  }
+  .heading {
+    width: 95%;
+    padding: 1em;
+    font-size: small;
+  }
+}
+@media screen and (min-width: 575px) and (max-width: 766px) {
+  .App{
+  height: auto;
+  width: 100%;
+  }
+  .heading {
+    width: 95%;
+    padding: 1em;
+    font-size: medium;
+  }
+}
+@media screen and (min-width: 767px) and (max-width: 991px) {
+ .App{
+  height: auto;
+  width: 100%;
+ }
+ .heading {
+  width: 95%;
+  padding: 1em;
+  font-size: medium;
+}
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .App{
+    height: auto;
+    width: 100%;
+  }
+  .heading {
+    width: 96.75%;
+    padding: 1em;
+    font-size: 1em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .App{
+    height: auto;
+    width: 100%;
+  }
+  .heading {
+    width: 97.75%;
+    padding: 1em;
+    font-size: large;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
